# hypersynthetic

./: Cargo.toml  README.md
.github/workflows/: rust.yml
hypersynthetic/: Cargo.toml
hypersynthetic/src/: component.rs  lib.rs
hypersynthetic/tests/: html_macro_tests.rs  temp_test.rs  test_arguments_in_the_wrong_order.rs  test_argumnets_with_refs.rs  test_axum.rs  test_bare_text.rs  test_complex_lifetime_scenarios.rs  test_component_import.rs  test_components.rs  test_for.rs  test_formatting_in_text_node.rs  test_html_fragments_api.rs  test_if.rs  test_keywords.rs  test_previous_bugs.rs  test_rocket.rs  test_slots.rs
hypersynthetic_macros/: Cargo.toml  README.md
hypersynthetic_macros/src/: attributes.rs  generator.rs  lib.rs  nodes.rs  parser.rs  utils.rs
hypersynthetic_macros/tests/: html_macro_tests.rs
hypersynthetic_types/: Cargo.toml
hypersynthetic_types/src/: lib.rs
test_component_lib/: Cargo.toml
test_component_lib/src/: lib.rs
