[package]
name = "hypersynthetic"
version = "0.2.0"
authors = ["Aleksandr Kovalev <aleksandr@kovalev.engineer>"]
edition = "2021"
description = "An HTML template engine that chose composition over inheritance"
readme = "../README.md"
homepage = "https://github.com/sanchopanca/hypersynthetic"
repository = "https://github.com/sanchopanca/hypersynthetic"
license = "MIT OR Apache-2.0"
keywords = ["hypermedia", "html", "template"]
categories = ["template-engine", "web-programming"]

[dependencies]
hypersynthetic_macros = { path = "../hypersynthetic_macros", version = "0.2.0" }
htmlize = "1.0.3"
