[package]
name = "hypersynthetic"
version = "0.8.0"
authors = ["Aleksandr Kovalev <aleksandr@kovalev.engineer>"]
edition = "2021"
description = "An HTML template engine that chose composition over inheritance"
readme = "../README.md"
homepage = "https://github.com/sanchopanca/hypersynthetic"
repository = "https://github.com/sanchopanca/hypersynthetic"
license = "MIT OR Apache-2.0"
keywords = ["hypermedia", "html", "template"]
categories = ["template-engine", "web-programming"]

[features]
rocket = ["dep:rocket"]
axum = ["dep:axum"]

[dependencies]
hypersynthetic_macros = { path = "../hypersynthetic_macros", version = "0.8.0" }
htmlize = "1.0.5"
axum = { version = "0.7", optional = true }
rocket = { version = "0.5", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
axum-test = "16"
