[package]
name = "hypersynthetic_macros"
version = "0.1.1"
authors = ["Aleksandr Kovalev <aleksandr@kovalev.engineer>"]
edition = "2021"
description = "Macros for hypersynthetic"
readme = "README.md"
homepage = "https://github.com/sanchopanca/hypersynthetic"
repository = "https://github.com/sanchopanca/hypersynthetic"
license = "MIT OR Apache-2.0"
keywords = ["hypermedia", "html", "template"]
categories = ["template-engine", "web-programming"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
hypersynthetic_types = { path = "../hypersynthetic_types", version = "0.1.0" }
htmlize = "1.0.3"
